--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
+@import "~bootstrap/scss/bootstrap";
+
 /* You can add global styles to this file, and also import other style files */
+.img-thumbnail {
+  margin: 2px;
+}
