Ejercicio completo de video clip

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,8 +1,15 @@
 <div class="d-flex justify-content-arround">
   <div class="video-player m-2">
     <video #video controls preload="metadata" style="width:100%;">
-      <source [src]="videoSelected?.source" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+      <source [src]="videoSelected?.videoClip" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
+    <p>
+      <strong>{{videoSelected?.name}}</strong>
+      <br>
+      Inicio: {{videoSelected?.startTime}} seg.
+      <br>
+      Fin: {{videoSelected?.endTime}} seg.
+    </p>
   </div>
   <div class="card m-2 flex-fill">
     <div class="card-header d-flex align-items-center">
@@ -11,31 +18,41 @@
     </div>
     <div class="card-body p-2">
       <div #ssContainer class="d-flex flex-wrap">
-        <div class="card m-2" style="width: 200px">
-          <img class="card-img-top" src="./assets/fullVideo.png" alt="Clip">
+        <div class="card m-2" style="width: 200px" [ngClass]="{'border-primary':videoSelected?.clipId=='complete'}">
+          <img class="card-img-top" [src]="videoComplete?.source" alt="Clip">
           <div class="card-body p-2">
             <p class="card-text">
-              <strong>Video Completo</strong>
+              <strong>{{videoComplete.name}}</strong>
               <br>
-              Inicio: 0 seg.
+              Inicio: {{videoComplete.startTime}} seg.
               <br>
-              Fin: 52 seg.
+              Fin: {{videoComplete.endTime}} seg.
             </p>
+            <div class="d-flex justify-content-center">
+
+              <button type="button" class="card-link btn btn-link text-success" (click)="playClip(videoComplete)">
+                <mat-icon>play_arrow</mat-icon>
+              </button>
+
+            </div>
           </div>
         </div>
-        <div class="card m-2" style="width: 200px" *ngFor="let clip of clips">
-          <!--<img class="card-img-top" [src]="clip.source" alt="Clip">-->
+        <div class="card m-2" style="width: 200px" *ngFor="let clip of clips" [ngClass]="{'border-primary':videoSelected?.clipId == clip.clipId}">
+          <img class="card-img-top" [src]="clip.source" alt="Clip">
           <div class="card-body p-2">
             <p class="card-text">
               <strong>{{clip.name}}</strong>
               <br>
-              Inicio: {{clip.timeStart}} seg.
+              Inicio: {{clip.startTime}} seg.
               <br>
-              Fin: {{clip.timeEnd}} seg.
+              Fin: {{clip.endTime}} seg.
             </p>
             <div class="d-flex justify-content-between">
               <button type="button" class="card-link btn btn-link" (click)="editClip(clip)">
                 <mat-icon>edit</mat-icon>
+              </button>
+              <button type="button" class="card-link btn btn-link text-success" (click)="playClip(clip)">
+                <mat-icon>play_arrow</mat-icon>
               </button>
               <button type="button" class="card-link  btn btn-link text-danger" (click)="deleteClip(clip)">
                 <mat-icon>delete</mat-icon>
@@ -47,5 +64,5 @@
     </div>
   </div>
 </div>
-<canvas #canvas width="750px" height="540px" style="display:block;">
+<canvas #canvas width="750px" height="540px" style="display:block;" class="d-none">
 </canvas>
