--- a/src/app/home/modal-clip/modal-clip.component.html
+++ b/src/app/home/modal-clip/modal-clip.component.html
@@ -12,13 +12,13 @@
       <label>Inicio<br />
         <small class="text-muted">Tiempo de inicio del clip (segundos)</small>
       </label>
-      <input type="number" class="form-control" formControlName="timeStart" />
+      <input type="number" class="form-control" formControlName="startTime" />
     </div>
     <div class="form-group">
       <label>Final<br />
         <small class="text-muted">Tiempo de fin del clip (segundos)</small>
       </label>
-      <input type="number" class="form-control" formControlName="timeEnd" />
+      <input type="number" class="form-control" formControlName="endTime" />
     </div>
     <input type="hidden" formControlName="clipId" />
     <div class="d-flex justify-content-end">
