ejercicio video player terminado [Fernando Herdoiza]

--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,5 +1,24 @@
+@import "~src/variables";
+
 .video-player {
   width: 400px;
   min-width: 400px;
   max-width: 400px;
+  max-height: 350px;
+
+  .loader {
+    margin: 0 0 2em;
+    height: 100px;
+    width: 20%;
+    text-align: center;
+    padding: 1em;
+    margin: 0 auto 1em;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  svg path,
+  svg rect {
+    fill: $primary;
+  }
 }
