--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,15 +1,36 @@
 <div class="d-flex justify-content-arround">
-  <div class="video-player m-2">
-    <video #video controls preload="metadata" style="width:100%;">
-      <source [src]="videoSelected?.videoClip" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
-    </video>
-    <p>
-      <strong>{{videoSelected?.name}}</strong>
-      <br>
-      Inicio: {{videoSelected?.startTime}} seg.
-      <br>
-      Fin: {{videoSelected?.endTime}} seg.
-    </p>
+
+  <div class="card video-player m-2">
+    <div *ngIf="showLoading" class="d-flex flex-fill align-items-center justify-content-center">
+      <div class="loader loader--style1" title="0">
+        <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
+          <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
+              s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634
+              c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z" />
+          <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+              C22.32,8.481,24.301,9.057,26.013,10.047z">
+            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20"
+              dur="1s" repeatCount="indefinite" />
+          </path>
+        </svg>
+      </div>
+    </div>
+    <div [hidden]="showLoading">
+      <video #video controls preload="metadata" style="width:100%;" class="card-img-top">
+        <source [src]="videoSelected?.videoClip" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+      </video>
+      <div class="card-body">
+        <p>
+          <strong>{{videoSelected?.name}}</strong>
+          <br>
+          Inicio: {{videoSelected?.startTime}} seg.
+          <br>
+          Fin: {{videoSelected?.endTime}} seg.
+        </p>
+      </div>
+    </div>
+
   </div>
   <div class="card m-2 flex-fill">
     <div class="card-header d-flex align-items-center">
@@ -18,26 +39,7 @@
     </div>
     <div class="card-body p-2">
       <div #ssContainer class="d-flex flex-wrap">
-        <div class="card m-2" style="width: 200px" [ngClass]="{'border-primary':videoSelected?.clipId=='complete'}">
-          <img class="card-img-top" [src]="videoComplete?.source" alt="Clip">
-          <div class="card-body p-2">
-            <p class="card-text">
-              <strong>{{videoComplete.name}}</strong>
-              <br>
-              Inicio: {{videoComplete.startTime}} seg.
-              <br>
-              Fin: {{videoComplete.endTime}} seg.
-            </p>
-            <div class="d-flex justify-content-center">
-
-              <button type="button" class="card-link btn btn-link text-success" (click)="playClip(videoComplete)">
-                <mat-icon>play_arrow</mat-icon>
-              </button>
-
-            </div>
-          </div>
-        </div>
-        <div class="card m-2" style="width: 200px" *ngFor="let clip of clips" [ngClass]="{'border-primary':videoSelected?.clipId == clip.clipId}">
+        <div class="card m-2" style="width: 200px" *ngFor="let clip of clips;  index as i; first as isFirst" [ngClass]="{'border-primary':videoSelected?.clipId == clip.clipId}">
           <img class="card-img-top" [src]="clip.source" alt="Clip">
           <div class="card-body p-2">
             <p class="card-text">
@@ -47,14 +49,14 @@
               <br>
               Fin: {{clip.endTime}} seg.
             </p>
-            <div class="d-flex justify-content-between">
-              <button type="button" class="card-link btn btn-link" (click)="editClip(clip)">
+            <div class="d-flex justify-content-center">
+              <button type="button" class="card-link btn btn-link" (click)="editClip(clip)" *ngIf="!isFirst">
                 <mat-icon>edit</mat-icon>
               </button>
               <button type="button" class="card-link btn btn-link text-success" (click)="playClip(clip)">
                 <mat-icon>play_arrow</mat-icon>
               </button>
-              <button type="button" class="card-link  btn btn-link text-danger" (click)="deleteClip(clip)">
+              <button type="button" class="card-link  btn btn-link text-danger" (click)="deleteClip(clip)" *ngIf="!isFirst">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
@@ -65,8 +67,10 @@
     <div class="card-footer d-flex justify-content-center">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
-          <li class="page-item"><button class="page-link" type="button" (click)="playAnotherClip(-1)">Anterior (a)</button></li>
-          <li class="page-item"><button class="page-link" type="button" (click)="playAnotherClip(1)">Siguiente (s)</button></li>
+          <li class="page-item"><button class="page-link" type="button" (click)="playAnotherClip(prevClip)">Anterior
+              (&larr;)</button></li>
+          <li class="page-item"><button class="page-link" type="button" (click)="playAnotherClip(nextClip)">Siguiente
+              (&rarr;)</button></li>
         </ul>
       </nav>
     </div>
